# ha-sunspec2

./: .gitignore  CLAUDE.md  LICENSE  README.md  REWRITE_PLAN.md  hacs.json  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
custom_components/sunspec2/: __init__.py  api.py  config_flow.py  const.py  diagnostics.py  discovery.py  entity.py  errors.py  icons.json  logger.py  manifest.json  migration.py  model_labels.py  models.py  number.py  quality_scale.yaml  sensor.py  services.yaml  switch.py
custom_components/sunspec2/translations/: de.json  en.json
tests/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_diagnostics.py  test_discovery.py  test_errors.py  test_init.py  test_migration.py  test_models.py  test_sensor.py
